[FIXED] MkDocs warnings about missing files by adding the proper relative paths

--- a/catznip/docs/release_notes/r04.md
+++ b/catznip/docs/release_notes/r04.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R4](Catznip_R4.jpg)
+![Catznip_R4](./r04/Catznip_R4.jpg)
 
 After much screaming, arguments, thinly veiled threats and finally tricking the Kitty while sleep deprived, we have finally settled on a numbering scheme for Catznip. R for release and then a number incrementally higher then the previous (I kid you not). So anyway, to celebrate we have not one but two releases side by side. Essentially cleaning up the 3.2.0 Beta we released recently, adding couple of new features and a slew of fixes.
 
