--- a/catznip/docs/release_notes/r05.md
+++ b/catznip/docs/release_notes/r05.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R5](Catznip_R5.jpg)
+![Catznip_R5](./r05/Catznip_R5.jpg)
 
 Catznip R5 is a little overdue and initially started out as a maintenance release, but you know how these things go, poke this , poke that, add something here, ranting screaming fit there …
 
