--- a/catznip/docs/release_notes/r06.md
+++ b/catznip/docs/release_notes/r06.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R6](Catznip_R6.jpg)
+![Catznip_R6](./r06/Catznip_R6.jpg)
 
 This is the maintenance release we were trying for last time and is strongly recommended, kitty did try and sneak in a few new features while she bashed away at the bugs but I stopped her! Not having any of that nonsense I said .. bad kitty.
 
