--- a/catznip/docs/release_notes/r07.md
+++ b/catznip/docs/release_notes/r07.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R7.jpg](Catznip_R7.jpg)
+![Catznip_R7.jpg](./r07/Catznip_R7.jpg)
 
 Wow! Ok, this release has been a massive undertaking that went on far longer than it should have. We got off to a slow start thanks to some RL and then bogged down as a number of our internal projects matured to the point of release. We always plan to add new things in odd numbered releases and the bug fix and polish the even numbered ones but might have gotten a bit carried away this time.
 
@@ -23,7 +23,7 @@ Read the full Release Notes and Download.
 ## Appearance Tools
 Appearence floater has been over hauled with a new 'Inventory View' display option for the wearing panel and quick up/down icons to reorder items worn on the same layer. '''Find Original''' has been added tot he context menus and opens an Inventory floater. 
 
-![Catznip_R7-2](Catznip_R7-2.jpg)
+![Catznip_R7-2](./r07/Catznip_R7-2.jpg)
 
 * added   : up/down (re)ordering arrows shown for wearable types with more than one worn wearable
 * added   : "Appearance" sort order to the wearing panel which sorts items in (more or less) order of appearance on the avatar
@@ -41,7 +41,7 @@ Limited new build tools added including unique pipette pickers, parameter copy a
 
 This is a long way from what we have in mind for the build tools so should be seen as a stop gap to make Catznip competative with other TPV's extended controls.
 
-![Catznip_R7-4](Catznip_R7-4.jpg)
+![Catznip_R7-4](./r07/Catznip_R7-4.jpg)
 
 * added  : 'Axis at Root' checkbox on the build floater to position the axis on the center of the first (root) object in the selection rather than the center of the bounding box of the entire selection
 * added  : axis options floater to control the "AxisPosition" and "AxisOffset" settings
@@ -59,10 +59,10 @@ This is a long way from what we have in mind for the build tools so should be se
 * added : highlight parsing callback functionality + working sound and flash triggers in the chat history control
 
 ## Usability Enhancements
-![Catznip_R7-5.](Catznip_R7-5.jpg)
+![Catznip_R7-5.](./r07/Catznip_R7-5.jpg)
 
 ### Detach Folder
-![MenuDetachFolder](MenuDetachFolder.png){ width=50% }
+![MenuDetachFolder](./r07/MenuDetachFolder.png){ width=50% }
 
 * added   : "Detach Folder" as a context menu option for worn attachments
 	* detaches the selected attachment and all other worn items in the same folder
@@ -125,7 +125,7 @@ Group moderators now show bold and sorted at the top in the participants list.
 * fixed   : clicking the "Received Items" button changes the visible toggle state on all open inventory floaters
 
 ### Inventory Tabs
-![InventoryTabs](InventoryTabs.png){ width=66% }
+![InventoryTabs](./r07/InventoryTabs.png){ width=66% }
 
 * added : user-add'able inventory panels to the inventory floater by clicking on the "+" tab
 	* added : tab remove callback to the LLTabContainer
@@ -148,7 +148,7 @@ The legacy places search has been added to the main search floater and a compact
 * changed : refresh the current "Search Places" sidepanel search when user changes the category or maturity
 
 ## Mini Map
-![FloaterMiniMap2](FloaterMiniMap2.png){ width=66% }
+![FloaterMiniMap2](./r07/FloaterMiniMap2.png){ width=66% }
 
 Overhauled Mini Map (CTRL+SHIFT+M in the viewer) can now show the world map image as a backround with parcel lines rendered over the top, special parcel flags are also shown (In addition to objects and such). Zoom menu has been redone with sensible settings.
 
@@ -170,7 +170,7 @@ Overhauled Mini Map (CTRL+SHIFT+M in the viewer) can now show the world map imag
 	* params should now largely be identical to the legacy tooltips
 
 ## Object Blacklist
-![FloaterAvatarObjectBlacklist_Derender](FloaterAvatarObjectBlacklist_Derender.png){ width=50% }
+![FloaterAvatarObjectBlacklist_Derender](./r07/FloaterAvatarObjectBlacklist_Derender.png){ width=50% }
 
 Brand new derender that is unique among TPV's with both session and persistent removal of objects, removed entries instantly rerez back in-world without requiring a tp'ing away and back or relog.
 
@@ -184,7 +184,7 @@ Brand new derender that is unique among TPV's with both session and persistent r
 ## Usability Enhancements
 
 ### Parcel Inspector
-![InspectorLocation](InspectorLocation.png){ width=66% }
+![InspectorLocation](./r07/InspectorLocation.png){ width=66% }
 
 * added : parcel/location inspector for the world map and [[Mini Map]]
 * changed : show parcel size and for sale price on the location inspector
@@ -195,13 +195,13 @@ Brand new derender that is unique among TPV's with both session and persistent r
 * changed : use the new floater to display landmark information
 
 ### Rigged Mesh Attachment Menu
-![MenuRiggedMesh](MenuRiggedMesh.png){ width=66% }
+![MenuRiggedMesh](./r07/MenuRiggedMesh.png){ width=66% }
 
 * fixed : can't right-click rigged mesh attachments to detach them
 * fixed : can't right-click other avatar's rigged mesh attachments
 
 ### Texture Refresh
-![MenuTextureRefresh](MenuTextureRefresh.png){ width=50% }
+![MenuTextureRefresh](./r07/MenuTextureRefresh.png){ width=50% }
 
 * added : "Texture Refresh" to the context menu for objects and attachments (self and others)
 	* forces all applied textures (and sculpt maps) to be refetched
@@ -238,7 +238,7 @@ Pretty much reworked all of the key floaters and cleaned up a lot of the UI. Lot
 
 ## General Bugfixes & Minor Changes
 
-![Catznip_R7-3](Catznip_R7-3.jpg)
+![Catznip_R7-3](./r07/Catznip_R7-3.jpg)
 
 ## Automatic Updates
 
@@ -340,12 +340,12 @@ Fixed for *ALL* file dialogs in the viewer. You are no longer against the clock 
 * fixed : Linux client now has FMOD for playing parcel audio.
 
 ## Usability & Misc User Interface
-![ConvRearrange3](ConvRearrange3.png){ width=66% }
+![ConvRearrange3](./r07/ConvRearrange3.png){ width=66% }
 
 * added   : rearranging an IM tab also rearranges the corresponding chiclet
 * changed : restore a torn off IM floater to its previous tab position when redocking
 
-![TextureSaveAs](TextureSaveAs.png){ width=50% }
+![TextureSaveAs](./r07/TextureSaveAs.png){ width=50% }
 
 * added : "bmp" and "png" as file type options to the texture "Save As" file picker
 	* "Save As" preview button (or inventory context menu option) will show a file-picker with all three filetypes on Windows
