--- a/catznip/docs/release_notes/r08.md
+++ b/catznip/docs/release_notes/r08.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R8.jpg](Catznip_R8.jpg)
+![Catznip_R8](./r08/Catznip_R8.jpg)
 
 This release brings initial support from Linden Lab (LL) for server side appearance (SSA, formerly known as SSB, I know, right..), havok integration adds the long awaited ability to upload mesh objects and the full set of pathfinding features. We've added a couple more little usability features that we know you'll love and some minor updates to RLVa.
 
