--- a/catznip/docs/release_notes/r09.md
+++ b/catznip/docs/release_notes/r09.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R9.jpg](Catznip_R9.png)
+![Catznip_R9](./r09/Catznip_R9.png)
 
 This release has certainly been a long time coming and is our biggest single release to date, it will also be the last mega update as we move to a new shorter faster release cycle.
 
