--- a/catznip/docs/release_notes/r10.md
+++ b/catznip/docs/release_notes/r10.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R10.jpg](Catznip_R10.png)
+![Catznip_R10](./r10/Catznip_R10.png)
 
 Catznip R10 is a long overdue update that brings the viewer right up to date with all the latest from Linden Lab and fixes several issues from R9.
 
