--- a/catznip/docs/release_notes/r11.md
+++ b/catznip/docs/release_notes/r11.md
@@ -2,7 +2,7 @@
 
 <sup>(Imported from MediaWiki - layout may be broken)</sup>
 
-![Catznip_R11.jpg](Catznip_R11.png)
+![Catznip_R11](./r11/Catznip_R11.png)
 
 This release brings Catznip right up-to date with new LL features including Bento (new avatar bones), Jelly Dolls, Graphics presets, HTTP co-routines, LibVLC, OpenJPEG, voice improvements and a lot of bug fixes. We also have a new 'Quick preferences' floater providing access to local rendering, avatar complexity, wearing and windlight options. RLVa has seen more incremental updates and can now be enabled without needing to restart the client.
 
