--- a/catznip/docs/release_notes/r12.md
+++ b/catznip/docs/release_notes/r12.md
@@ -3,7 +3,7 @@
 ## Inventory
 
 ### Accept in
-![InvAcceptIn.png](InvAcceptIn.png)
+![InvAcceptIn](./r12/InvAcceptIn.png)
 
 This is definitely one of the most important features of this releases and one that (I hope) will have the most impact on how you deal with shopping in Second Life and keeping your inventory manageable.
 
@@ -15,7 +15,7 @@ With this feature, you’ll now get a new drop-down when you get offered a folde
 
 Clicking the browse of the wrench icon will let you simply pick a folder, or provide you with more advanced configuration options:
 
-![InvAcceptInFlow.png](InvAcceptInFlow.png)
+![InvAcceptInFlow](./r12/InvAcceptInFlow.png)
 
 This means that if – for instance – I go to this month’s Uber event and buy something it’ll be auto-sorted to a special “Shopping / 2017-December / Uber” folder and even if I don’t unpack or touch a single box I’ll still have some semblance of a sorted inventory.
 
@@ -28,17 +28,17 @@ Clearly there needed to be some way to keep the contents of an unpacked object n
 
 For instance:
 
-![InvAcceptInObject.png](InvAcceptInObject.png)
+![InvAcceptInObject](./r12/InvAcceptInObject.png)
 
 If the accept in destination is prefixed with the word “Object:” it simply means that I’m trying to be clever and offering to let you unpack an object into the same folder the item lives in rather than some completely unrelated folder elsewhere in your inventory.
 
 Since there are as many inventory organizing schemes as there are residents, this might >not< be the behaviour you want in which case you can click the little wrench icon and untick the following:
 
-![InvAcceptInObjectCfg.png](InvAcceptInObjectCfg.png)
+![InvAcceptInObjectCfg](./r12/InvAcceptInObjectCfg.png)
 
 ### Searching
 
-![InvFilter.png](InvFilter.png)
+![InvFilter](./r12/InvFilter.png)
 
 The next big inventory feature is the completely revamped inventory filter floater which comes in both an expanded (tall) version on the left, or the more compact (tabbed) version on the right. Simply click the arrows in the bottom right to switch between one and the other.
 
@@ -51,17 +51,17 @@ The biggest change here – and one that I end up using all the time now – is 
 Examples:
 * I remembered picking up some Wasabi Pills hair 2-3 months ago and picking the Ombre pack so combining “ombre” >and< “Wasabi” (so an “All” search) instantly gave me what I needed
 
-![InvFilterAll.png](InvFilterAll.png)!
+![InvFilterAll](./r12/InvFilterAll.png)!
 
 * I needed to find a gacha kitty headband I got months ago. Good luck! So I searched my inventory for all occurrences of “band”, “head” >or< “hair” (so an “Any” search) and after a lot of scrolling I got it
 
-![InvFilterAny.png](InvFilterAny.png)
+![InvFilterAny](./r12/InvFilterAny.png)
  
 Play around with these a little bit and you’ll see that they’re extremely useful tools to let you find that specific item you’re looking for that would have otherwise been much harder to locate. Once you’re familiar with the “Exact”, “All” and “Any” concept pay attention to the shorthand code that’s appearing in the main inventory floater as well. You don’t need to actually specify a search type on the filter floater, you can simply prefix your regular search words with “any:” and “all:” as well.
 
 Finally, since it was a special request it’s also possible to search your inventory using regular expressions (don’t worry if you don’t know what this means!):
 
-![InvFilterRgx.png](InvFilterRgx.png)
+![InvFilterRgx](./r12/InvFilterRgx.png)
 
 ### Show Contents In
 
@@ -69,14 +69,14 @@ Often you'll be searching for something and either only the folder containing th
 
 With this feature you'll be able to right-click the folder and pick "Show Contents In / Current Search" which will make all the items in that folder visible regardless of whether they match the current search words or not.
 
-![InvShowInSearch.png](InvShowInSearch.png)
+![InvShowInSearch](./r12/InvShowInSearch.png)
 
 ### Mark as protected/system folders
 If you right-click one of your own folders you’ll have a new option to treat it as if It was a system folder: this means that it sorts at the top with the other system folders if you have “Sort System Folders to Top” checked and it will also prevent you from accidentally deleting it.
 
 This doesn’t actually mess with your inventory but is rather a local setting; if you use multiple computers then you’ll have to do it for each once (I’m working on that!), and it won’t apply to any other viewers.
 
-![InvSystemFolder.png](InvSystemFolder.png)
+![InvSystemFolder](./r12/InvSystemFolder.png)
 
 ### Folder context menu enhancements
 As you might be able to spot from the screenshot above I did some minor layout changes to the inventory context menu; with the new inventory options and LL’s new “Use as default” it felt like the menu was getting rather bloated; so in order to keep it manageable I decided to fold all inventory creation options into the “New Items” sub menu.
@@ -90,14 +90,14 @@ As an extra convenience I added a “Take (Replace Links)” option to the conte
 
 (Note that the option will only show if the rezzed object has links pointing to it in your inventory)
 
-![TakeReplace.png](TakeReplace.png)
+![TakeReplace](./r12/TakeReplace.png)
 
 ## Quick preferences
 ### Main
 Catznip’s version of “quick preferences” was added in R11; R12 adds some minor functionality and enables the mysterious “quick inventory” tab.
 
-![QuickPrefs.png](QuickPrefs.png)
-![QuickPrefsWearing.png](QuickPrefsWearing.png)
+![QuickPrefs](./r12/QuickPrefs.png)
+![QuickPrefsWearing](./r12/QuickPrefsWearing.png)
 
 Minor improvements:
 * CATZ-278 - The 'Quick Preferences' floater should be collapsible
@@ -115,7 +115,7 @@ We all keep several HUDs attached in order to get to them quickly if we need to 
 
 The quick inventory panel is my first attempt at a way to define things you want to have quick access to:
 
-![QuickPrefsInventory.png](QuickPrefsInventory.png)
+![QuickPrefsInventory](./r12/QuickPrefsInventory.png)
  
 First you create a folder anywhere in your inventory, named anything you like (you might even already have such a folder at the ready) and fill it with links (or copies) to items you frequently need or, as you can tell from my example, you can put links to any existing outfits you might have.
 
@@ -132,28 +132,28 @@ R12 adds a per-group option to always snooze group chat when you hit the little 
 
 To configure, go to Communicate / Groups – right-click the group you wish the change the option for and pick “View Info”. The option will be 2/3rd of the way down:
 
-![GroupSnooze.png](GroupSnooze.png)
+![GroupSnooze](./r12/GroupSnooze.png)
 
 Additionally if you already have group chat open, you can always right-click the group’s chiclet and pick “Group Info” from there to get to the groups properties/profile floater or to snooze the group chat (using the default set).
 
-![GroupChiclet.png](GroupChiclet.png)
+![GroupChiclet](./r12/GroupChiclet.png)
 
 Finally, you’re also able to manually snooze group chat using the new chat toolbar icon; if you configured closing group chat to always snooze then you can for instance pick “Until relog” to not see group chat until you relog (or until manually reopen it).
 
-![GroupSnoozeFlyout.png](GroupSnoozeFlyout.png)
+![GroupSnoozeFlyout](./r12/GroupSnoozeFlyout.png)
 
 ### Only join conferences started by friends
 There’s recently been some griefing that involves joining busy groups only to then start mass-conferences with group members; this option will only accept conference conversations that were started by someone on your friends list. If a conference is blocked you’ll briefly see a toast and a message will be logged to nearby chat.
 
 Additionally, I also provided an option to auto-ignore all group voice calls (note that this doesn’t block voice conferences from friends or non-friends).
 
-![PrefConferences.png](PrefConferences.png)
+![PrefConferences](./r12/PrefConferences.png)
 
 ### Chat History
 LL added the chat history a couple of years back but it – at least to me – never ended up feeling like it could replace hunting for the log folder and then opening the chat log in Notepad to search for what I wanted. In R12 it got a bit of a polish and three new functionalities were added to hopefully start making it more usable/friendly:
 
-![ChatHistory.png](ChatHistory.png)
-![ChatHistoryFilter.png](ChatHistoryFilter.png)
+![ChatHistory](./r12/ChatHistory.png)
+![ChatHistoryFilter](./r12/ChatHistoryFilter.png)
  
 * The drop down allows you to filter the chat history down to a specific year (or month)
 * The search box will search through the chat history for the specified word/sentence. Note that when you open the chat history it opens the last page by default so if you search for something you’ll need to click the back button to search back in time.
@@ -169,27 +169,27 @@ The following bugs relating to the chat history were also fixed:
 ## Magnifying glass on avatar profile picture(s)
 When you hover over a profile texture on the (legacy) profile floater, About Land, a group’s profile, … your cursor will show the zoom option which will open a texture preview floater of that texture (note that you do not have permission to save it to disk) with a fixed aspect ratio that matches the texture control’s.
 
-![ZoomProfile.png](ZoomProfile.png)
-![ZoomParcel.png](ZoomParcel.png)
+![ZoomProfile](./r12/ZoomProfile.png)
+![ZoomParcel](./r12/ZoomParcel.png)
 
 ## Notifications filtering
 In R11 the notifications floater was revamped; in R12 there’s a new option for those of us who keep old notifications around but still want an easy way to see which notifications (group notices) are new. The “Since Logoff” option will (similarly to your inventory’s Recent tab) show only those notifications that were added since your last logoff (and any from the current logon session). 
 
-![NotifSinceLogoff.png](NotifSinceLogoff.png)
+![NotifSinceLogoff](./r12/NotifSinceLogoff.png)
 
 Additionally, every month the Luxe Box group is filled with people who don’t know how to get to a group’s notices so as a reminder there are 4 additional ways to easily get to the group notices in Catznip (does not apply to other viewers):
 * From a group notice by clicking the group name (requested by a user and added in R12)
 
-![GroupNotice.png](GroupNotice.png)
+![GroupNotice](./r12/GroupNotice.png)
 * The envelope icon in the group chat tool bar
 
-![ChatGroupToolbar.png](ChatGroupToolbar.png)
+![ChatGroupToolbar](./r12/ChatGroupToolbar.png)
 * The “Group Notices” option in the group chat’s chiclet right-click menu
 
-![GroupChiclet.png](GroupChiclet.png)
+![GroupChiclet](./r12/GroupChiclet.png)
 * The “View Notices” option in the right-click menu of the People / Groups tab
 
-![GroupPeopleContextMenu.png](GroupPeopleContextMenu.png)
+![GroupPeopleContextMenu](./r12/GroupPeopleContextMenu.png)
 
 Additionally you’ll be able to instantly open the group’s profile by right-click the group’s name in the group notice, as well as the notice’s sender.
 Related bugfixes:
@@ -200,17 +200,17 @@ Related bugfixes:
 ### Texture flip
 Another long-time request since LL took this away; clicking the button will flip the horizontal/vertical scale (for diffuse, normal or specular depending on your current edit mode).
 
-![BuildFlip.png](BuildFlip.png)
+![BuildFlip](./r12/BuildFlip.png)
 
 ### Hex/HTML colour value support
 I was trying something with complementary colours and got annoyed that I had to keep converting from hex colour value to RGB so there you go 😊.
 
-![BuildHexColour.png](BuildHexColour.png)
+![BuildHexColour](./r12/BuildHexColour.png)
 
 ## Region restart floater shaking
 This was a long time request, sorry it took so long to get around to it but it’s finally here 😊.
 
-![FloaterRestart.png](FloaterRestart.png)
+![FloaterRestart](./r12/FloaterRestart.png)
  
 Related bugfixes:
 * CATZ-296 - Region restart shows the wrong remaining time
@@ -223,11 +223,11 @@ Finally, keep in mind that your video card’s memory is shared between all curr
 
 Change it in Me / Preferences – Graphics tab and Advanced Graphics (a revamp of the graphics preferences is coming! I know the default is horrid ☹).
  
-![PrefsTextMemory.png](PrefsTextMemory.png)
+![PrefsTextMemory](./r12/PrefsTextMemory.png)
 
 For those on the Windows 10 Fall Creator update you’ll have a very easy way to monitor your GPU memory usage by using the Task Manager:
 
-![WinTaskManager.png](WinTaskManager.png)
+![WinTaskManager](./r12/WinTaskManager.png)
  
 (Note that the texture memory slider has been excluded from graphics presets – see CATZ-351)
 
@@ -237,13 +237,13 @@ The following 2 changes were made:
 *When you hold down both the left and right mouse button on your own avatar you'll start walking forward for as long as at least both buttons are held down (so in order to stop walking you need to release at least one button). While you're walking you can move the mouse around to steer; this hasn't changed and was always the behaviour when the left mouse button was down on yourself (or your own name tag).
 If you keep only the left mouse down then the camera will rotate along with your avatar; if you keep only the right button down then the camera will rotate around your avatar which will keep facing the same way (it’ll make more sense when you try it 😊).
 
-![MouseBoth.png](MouseBoth.png) Click your avatar (or name tag) with both mouse buttons to start moving forward. Move the mouse to steer. Release both buttons to stop, or release one to allow camming (see below).
+![MouseBoth](./r12/MouseBoth.png) Click your avatar (or name tag) with both mouse buttons to start moving forward. Move the mouse to steer. Release both buttons to stop, or release one to allow camming (see below).
 
-![MouseLeft.png](MouseLeft.png) When you let go of the right mouse button and keep holding down the left button you can orbit the camera and your avatar will turn to face the same direction.
+![MouseLeft](./r12/MouseLeft.png) When you let go of the right mouse button and keep holding down the left button you can orbit the camera and your avatar will turn to face the same direction.
 
-![MouseRight.png](MouseRight.png) When you let go of the left mouse button and keep holding down the right button your camera will orbit but your avatar will keep facing the same way.
+![MouseRight](./r12/MouseRight.png) When you let go of the left mouse button and keep holding down the right button your camera will orbit but your avatar will keep facing the same way.
 
-![MouseBoth.png](MouseBoth.png) Pressing both buttons once more will move you forward once more.
+![MouseBoth](./r12/MouseBoth.png) Pressing both buttons once more will move you forward once more.
 Note that you can switch between walking and running using the “Always Run” toggle [Ctrl-R].
 
 * In WoW holding down the left mouse will orbit the camera around your character without changing its orientation while right-click holding will orbit and rotate your character as well. In Second Life the left-hold-orbit has already always rotated your avatar around so I didn't want to touch that, secondly context menus are always supposed to open right after the mouse goes down so instead I had to use the middle mouse button to allow you to orbit around without actually turning that way.
@@ -263,9 +263,9 @@ R12 incorporates the avatar rendering list in the blocked/mute list floater (see
 
 Note that the avatar rendering exception list is stored locally and per-viewer (requests to change this need to go through LL’s JIRA unfortunately, it requires a minor server change to how the mute list is stored).
 
-![DerenderAvContext.png](DerenderAvContext.png)
-![DerenderAvFloater.png](DerenderAvFloater.png)
-![DerenderAvQuickPrefs.png](DerenderAvQuickPrefs.png)
+![DerenderAvContext](./r12/DerenderAvContext.png)
+![DerenderAvFloater](./r12/DerenderAvFloater.png)
+![DerenderAvQuickPrefs](./r12/DerenderAvQuickPrefs.png)
 
 ## RLVa
 No new functionality but the following bugs were fixed:
@@ -310,4 +310,4 @@ No new functionality but the following bugs were fixed:
 ## New website + backend
 Last, but certainly not least there's also been a lot of work done on a new Catznip website, as well as completely redoing the way the updater and crash reporter work. We'll be slowly unveiling this over the course of the year but for now you there's at least the new download page @ https://get.catznip.com!
 
-![GetCatznipCom.png](GetCatznipCom.png)
+![GetCatznipCom](./r12/GetCatznipCom.png)
