--- a/catznip/docs/release_notes/r12_1.md
+++ b/catznip/docs/release_notes/r12_1.md
@@ -1,6 +1,6 @@
 # Catznip R12.1
 
-![Catznip_R12_1.jpg](Catznip_R12_1.jpg)
+![Catznip_R12_1](./r12_1/Catznip_R12_1.jpg)
 
 ## Optimizations
 A lot of work went into optimizing this Catznip release: neither Coffea or I have recent hardware which makes it important that additions don’t negatively impact our own overall experience (FPS, etc). The same is true for features added by Linden Lab. Animesh in particular had a very negative impact on performance which we have largely negated with some extra work (including a fix from Beq for rendering rigged attachments with shadows enabled).
@@ -14,30 +14,30 @@ One popular suggestion was to add an option to only render friends in order to i
 
 In Catznip tradition I ran with the suggestion and gave it a Catznip twist so now we have an extra “Render” option on the quick preferences panel.
 
-![RenderOthersAs.png](RenderOthersAs.png)
+![RenderOthersAs](./r12_1/RenderOthersAs.png)
 
 Before explaining the new options in-depth I’d like to make sure everyone is on the same page with how the complexity settings works so let’s start with a quick recap:
 
-![QuickPrefsComplexity.png](QuickPrefsComplexity.png)
+![QuickPrefsComplexity](./r12_1/QuickPrefsComplexity.png)
 
 The complexity slider determines the maximum complexity that avatars around you can have: if their avatar cost is higher they’ll be rendered as a jelly doll (coloured imposter).
 
 The # Non-impostors slider determines how many nearby people that are under your complexity limit will be rendered in full, while everyone else will be shown as an imposter (a jelly doll that isn’t a uniform colour but rather still has all the textures of the actual avatar).
 
-![QuickPrefsExceptions.png](QuickPrefsExceptions.png)
+![QuickPrefsExceptions](./r12_1/QuickPrefsExceptions.png)
 
 Catznip then added an easy way for you to select that friends should always be rendered in full, regardless of your other settings, and additionally everyone standing near you (within chat range) as well as individual exceptions.
 
 The new options are (from bottom to top):
 
-![QuickPrefsRenderOthersAs.png](QuickPrefsRenderOthersAs.png)
+![QuickPrefsRenderOthersAs](./r12_1/QuickPrefsRenderOthersAs.png)
 
 * Everyone normally – the default: with this selected people will show as they always have (and subject to the settings)
 * Everyone as imposters – this basically overrides your “# Non-impostors” slider and shows those around you as an imposter (except the people that fall under your exceptions). This will provide a noticeable FPS boost, and is best combined with leaving “Nearby avatars” unchecked
 * Everyone as silhouettes – this takes the setting above one step further and shows everyone as an untextured outline. This setting will work best with “Nearby avatars” unchecked. Recommend this is enabled before teleporting to a busy event as this will prevent all avatar related textures from being downloaded, loading the vendors faster and saving texture memory by not downloading textures for silhouetted avatars.
 Example:
 
-![RenderOthersAsSilhouette.png](RenderOthersAsSilhouette.png)
+![RenderOthersAsSilhouette](./r12_1/RenderOthersAsSilhouette.png)
 
 * Myself and exceptions –  “hide” everyone around you except for those specified by exceptions. You can add specific avatars as an exception so you can see people who aren’t on your friends list.
 * Only myself – Finally, if nothing else works (or if you’re just trying to take a picture and people keep running into view!) this option will render you and only you.
@@ -46,29 +46,29 @@ If none of the above made much sense then don’t worry; it’s really easy so j
 
 As a last note: during testing we found that we would often forget that we turned off the rest of the world so as long as a non-default setting is active the following appears on the bottom of your screen as a reminder you that you’re potentially hiding people around you (it won’t show up in snapshots, don’t worry 😊).
 
-![RenderOthersAsMessage.png](RenderOthersAsMessage.png)
+![RenderOthersAsMessage](./r12_1/RenderOthersAsMessage.png)
 
 ## Login screen
 
-![LoginScreen.png](LoginScreen.png)
+![LoginScreen](./r12_1/LoginScreen.png)
 
 Most likely the very first thing you’ll notice about R12.1 is that the login screen has gotten an overhaul.
 
 To the right side of the Catznip logo you’ll see the parcel highlight slightly improved from previous; it cycles through all of that categories highlights every few seconds. It now has an the indicator providing a rough indication of how populated a location currently is (3 green people being the busiest down to 1 green person for >1 and a hollow orange for deserted). For instance:
 
-![LoginHighlight.png](LoginHighlight.png)
+![LoginHighlight](./r12_1/LoginHighlight.png)
 
 While it’s easy to find places in Second Life, it’s not always easy to find places to be social, so this will hopefully help in discovering new and fun places with people to interact with.
 
 Also new is the category selector on the right:
 
-![LoginCategories.png](LoginCategories.png)
+![LoginCategories](./r12_1/LoginCategories.png)
 
 You can hover your mouse over the categories to see what they are and clicking them will switch the carousel over to that specific category.
 
 Down at the bottom we have:
 
-![LoginTabs.png](LoginTabs.png)
+![LoginTabs](./r12_1/LoginTabs.png)
 
 * “What’s New” is primarily useful during beta runs when it shows a list of all the JIRAs that were fixed or added for that particular beta
 * “Grid Status” : all recent posts on the LL grid status “blog”
@@ -88,11 +88,11 @@ If you’ve used Catznip for a while, you’ll most likely have noticed that whe
 
 Similarly to opening a texture preview they could sometimes take a while to open if they weren’t already in your texture cache. While not quite instant, the loading time of texture previews (whether as a tooltip or opening the full preview floater) should be noticeably faster in R12.1.
 
-![TexturePreviewTooltip.png](TexturePreviewTooltip.png)
+![TexturePreviewTooltip](./r12_1/TexturePreviewTooltip.png)
 
 Additionally, when hovering over a folder that contains a single texture you’ll see a texture tooltip for that folder. For vendors that include the product picture with your purchase; or for those who meticulously take pictures of clothing items and/or outfits this gives a very quick and visual way to go through folders, without having to open and examine each.
 
-![TextureFolderTooltip.png](TextureFolderTooltip.png)
+![TextureFolderTooltip](./r12_1/TextureFolderTooltip.png)
 
 ### Chat
 * CATZ-386 - Allow the user to control how much vertical screen space is taken up by nearby chat toasts
@@ -102,7 +102,7 @@ Additionally, when hovering over a folder that contains a single texture you’l
 
 Under the main Me menu / Preferences and then the Chat tab you’ll now find more options to control how much vertical screen space can be occupied by nearby chat toasts and how long they linger on the screen before starting to fade.
 
-![ChatToastOptions.png](ChatToastOptions.png)
+![ChatToastOptions](./r12_1/ChatToastOptions.png)
 
 For those that wonder: the width of nearby chat toasts is actually derived from the width of the nearby chat floater. If you make it smaller or wider while nearby chat is visible you’ll see them resize on the spot to match.
 
@@ -118,7 +118,7 @@ For those that wonder: the width of nearby chat toasts is actually derived from 
 
 Catznip added the “Show in inventory” options to inventory offers and purchase floaters a while back, but it still never felt like it was doing quite what what expected; mostly due to 3 debug settings of which 2 directly conflicted. That’s been cleaned up and (hopefully) simplified.
 
-![ShowInInventory.png](ShowInInventory.png)
+![ShowInInventory](./r12_1/ShowInInventory.png)
 
 Inventory offers for an item that can be previewed (notecards/landmarks/textures) now offer to show the object rather than its location in inventory.
 
@@ -128,7 +128,7 @@ Inventory offers for an item that can be previewed (notecards/landmarks/textures
 
 When ‘Edit Linked’ is checked, you can use the next and previous buttons to cycle through the individual links of a link set.
 
-![LinkPrevNext.png](LinkPrevNext.png)
+![LinkPrevNext](./r12_1/LinkPrevNext.png)
 
 ### Avatar Fix menu
 * CATZ-430 - Group avatar troubleshooting options together in a sub-menu for both self & others
@@ -144,13 +144,13 @@ All context menu options that you might (frequently) use to resolve a problem wi
 * Reset Skeleton & Animations (default LL option)
 * Stop Animating Me (default LL option)
 
-![FixAvatar.png](FixAvatar.png)
+![FixAvatar](./r12_1/FixAvatar.png)
 
 Synchronizing animations was a long time request so I’m happy to finally add it, however it might work a bit different to what you’re used to on Firestorm. For instance: if you pick the option for an avatar then the animations that avatar is currently playing, along with animations of everyone sitting on the same object, will all be restarted. This should give a smoother fix of just the people you want rather than reset everyone around you.
 
 A global “Sync Animations” option has been added under the Advanced menu, this restarts all active animations.
 
-![FixAvatarSyncAnims.png](FixAvatarSyncAnims.png)
+![FixAvatarSyncAnims](./r12_1/FixAvatarSyncAnims.png)
 
 ### Appearance
 * CATZ-481 - Show current/unsaved changes on the wearable edit panel
@@ -159,7 +159,7 @@ While editing your shape (or any wearable such as alpha, physics, shirt, etc…)
 
 Dragging a slider back to its previous value will switch it back to an unchanged state so you can always tell, at a glance, what exactly you’ve changed and what will happen when you press the ‘Save’ button.
 
-![WearableEdit.png](WearableEdit.png)
+![WearableEdit](./r12_1/WearableEdit.png)
 
 ### Windlight Quick-Prefs
 * CATZ-414 - Add 'Reset Windlight' to the Troubleshooting tab
@@ -170,7 +170,7 @@ The Windlight quick preferences panel got a few minor changes:
 * “Day Cycle”, “Fixed Sky” and “Water” have a third button that directly opens the edit floater
 * A “Reset Windlight” button to go back to the default (the same button is also present on the Troubleshooting preferences tab)
 
-![QuickPrefsWindLight.png](QuickPrefsWindLight.png)
+![QuickPrefsWindLight](./r12_1/QuickPrefsWindLight.png)
 
 ### Wearing appearance panel
 * CATZ-343 - Show the total/remaining attachment count on the Wearing panel
@@ -179,7 +179,7 @@ The Windlight quick preferences panel got a few minor changes:
 
 The appearance wearing panel had a number of small bug fixes (see above) as well as the number of worn (and total available) attachments and quick count of temporary/experience attachments.
 
-![AppearanceWearing.png](AppearanceWearing.png)
+![AppearanceWearing](./r12_1/AppearanceWearing.png)
 
 ### Drag & Drop
 * CATZ-411 - Drag & drop texture upload broken
