--- a/catznip/docs/release_notes/r12_4.md
+++ b/catznip/docs/release_notes/r12_4.md
@@ -1,6 +1,6 @@
 # Catznip R12.4
 
-![Catznip_R12_4](Catznip_R12_4.jpg)
+![Catznip_R12_4](./r12_4/Catznip_R12_4.jpg)
 
 Little did we know just how prophetic that mock group notice would turn out to be!
 
