--- a/catznip/docs/release_notes/r13.md
+++ b/catznip/docs/release_notes/r13.md
@@ -13,7 +13,7 @@ We're getting close to being able to bring you much faster updates and new featu
 
 ## Mac version
 
-![MacInstaller.png](MacInstaller.png)
+![MacInstaller](./r13/MacInstaller.png)
 
 Thanks to a hardware donation (you know who you are! ♡) we have a working Mac again to test and develop on!
 
@@ -26,7 +26,7 @@ The viewer has had the ability to let you change between 3 fixed camera presets 
 
 From experience we know that people prefer a very minimal camera floater, so I did my best to keep things as tight as possible while still making the new feature easily accessible to everyone.
 
-![CameraFloaterLLvsCatznip.png](CameraFloaterLLvsCatznip.png)
+![CameraFloaterLLvsCatznip](./r13/CameraFloaterLLvsCatznip.png)
 
 
 You can read more about the feature and how to use it in Inara’s tutorial @ https://modemworld.me/2020/05/19/tutorial-viewer-camera-presets/ . Do keep in mind she is referencing the official viewer’s user interface, but everything should be clear enough to find your way around in Catznip if you keep on reading below 😊.
@@ -39,7 +39,7 @@ Additionally, both will now snap back to their default when resetting the camera
 
 The dropdown lets you choose from your available presets and we have included the popular Penny Patton ones in the viewer by default. Pressing the gear icon will open the presets floater which is significantly different from the official viewer’s (which confusingly has 3 separate floaters to do the same thing).
 
-![CameraPresets.png](CameraPresets.png)
+![CameraPresets](./r13/CameraPresets.png)
 
 
 On the left side you will see all presets. Clicking one will show you its detailed values on the right. The ‘Refresh’ icon will only show on presets that are included in the viewer by default and allow you reset them back in case you’ve made changes to them that you’re not at all happy with. 
@@ -49,12 +49,12 @@ To create a new preset, simply click the New button at the bottom right. To save
 You can immediately jump into changing the values; however you also have the option to pick ‘Sync with camera’ and move your camera into a rough starting position. Then uncheck the option when you have positioned it where you want it and tweak the values slightly to your liking before saving.
 
 To delete one of your own custom presets, hover over it on the left side and click the trash icon that appears.
-![CameraPresetsDelete.png](CameraPresetsDelete.png)
+![CameraPresetsDelete](./r13/CameraPresetsDelete.png)
 
  
 Finally: remember that Catznip has a transparency slider specifically for the Camera and Move floaters at the Me menu / Preferences / Colors tab. If you are one of the people who always keeps (one of) those floaters on screen, setting a low opacity will leave it accessible but not obscure part of the world.
 
-![CameraFloaterTransparency.png](CameraFloaterTransparency.png)
+![CameraFloaterTransparency](./r13/CameraFloaterTransparency.png)
 
 ## EEP / Windlight improvements
 
@@ -62,7 +62,7 @@ Finally: remember that Catznip has a transparency slider specifically for the Ca
 
 The panel went through a complete redesign and we would really love your feedback on it (especially if there's something you want quick access to that we forgot!)
 
-![QuickPrefsWindlight.png](QuickPrefsWindlight.png)
+![QuickPrefsWindlight](./r13/QuickPrefsWindlight.png)
 
 'Use Shared Environment' is the same as the World / Environment / Use Shared Environment menu option.
 
@@ -78,12 +78,12 @@ The wrench button immediately opens the 'Edit Environment' floater allowing you 
 
 Since Windlight settings can now be present in your own inventory as well as the default library settings we've made it clearer in the dropdowns to see where a setting your picking is located in your inventory
 
-![QuickPrefsWindlightDropdown.png](QuickPrefsWindlightDropdown.png)
+![QuickPrefsWindlightDropdown](./r13/QuickPrefsWindlightDropdown.png)
 
 ### Active (Windlight) setting indicator
 When a Windlight (day/sky/water) setting is currently active you'll now see an 'active' indicator behind it in My Environments and the inventory floater.
 
-![InventoryWindlightActive.png](InventoryWindlightActive.png)
+![InventoryWindlightActive](./r13/InventoryWindlightActive.png)
 
 ### Edit library assets
 Normally, if you want to make small changes to a stock/library Windlight setting you'd first have to copy that item into your own inventory and then open it to make edits.
@@ -103,12 +103,12 @@ Using a height value of 4 for instance will give you a lot more spatial detail o
 
 I have also added an option specifically to highlight light sources which can be useful if you’re trying to set up a picture or any situation where you might have an unwanted light source that isn’t immediately obvious.
 
-![BuildBeacons.png](BuildBeacons.png)
+![BuildBeacons](./r13/BuildBeacons.png)
 
 ### Group notice
 * CATZ-530 - Show 'remaining characters' on the group notice floater
 
-![GroupNewNotice.png](GroupNewNotice.png)
+![GroupNewNotice](./r13/GroupNewNotice.png)
 
 ### Places search
 * Pressing ⏎ [enter] on the text editor will run the search
@@ -117,20 +117,20 @@ I have also added an option specifically to highlight light sources which can be
 * Clicking the search button manually will also set focus to the first result
 * Double-clicking a search result will teleport you to that location
 
-![SearchPlaces.png](SearchPlaces.png)
+![SearchPlaces](./r13/SearchPlaces.png)
 
 ### Resolution scale
 If you're really struggling with your FPS then you can give the new resolution scale slider a try (it's under Me / Preferences / Graphics / Advanced).
 At 100% (all the way to the right) everything looks at normal; at 50% (all the way to the left) the viewer will render at half the normal resolution leaving you with a blockier view but hopefully a more manageable FPS (or allow you to enable Windlight / ALM where you otherwise couldn't).
 Play around with the setting - we've found there's definitely a sweet spot but it's different for each specific computer configuration.
 
-![GraphicsResolutionScale.png](GraphicsResolutionScale.png)
+![GraphicsResolutionScale](./r13/GraphicsResolutionScale.png)
 
 ### Minor improvements
 * CATZ-547 - Option to turn off extra lighting that is applied when editing appearance
 * CATZ-557 - Improve initial opening time for the landmarks floater (+ improved filtering performance)
 * CATZ-584 - Give visual feedback when using an invalid regex for an inventory search
-![InventoryRgxSearch.png](InventoryRgxSearch.png)
+![InventoryRgxSearch](./r13/InventoryRgxSearch.png)
 * CATZ-593 - Add option to sort Nearby and Friends list by username (cause nagging pony)
 * CATZ-594 - Opening the feedback floater should give focus to the feedback form
 * CATZ-597: Add link to Discord server and clean up social media links
