--- a/catznip/docs/release_notes/r12_2.md
+++ b/catznip/docs/release_notes/r12_2.md
@@ -1,6 +1,6 @@
 # Catznip R12.2
 
-![Catznip_R12_2.jpg](Catznip_R12_2.png)
+![Catznip_R12_2](./r12_2/Catznip_R12_2.png)
 
 This is largely a maintenance and 'quality of life' release. I’m trying to do these more frequently (ideally every couple of months) and decouple them from the major releases with all of the new shiny in them. 
 
@@ -19,12 +19,12 @@ The ‘Worn Items’ and ‘Quick Inventory’ panels on the ‘Quick Prefs’ f
 * CATZ-475  - Add button to open wearing panel to the 'Worn Items' quickprefs panel
 Clicking the shirt icon on the ‘Worn Items’ quick prefs panel will open its larger brother.
 
-![QuickPrefsWearing.png](QuickPrefsWearing.png)
+![QuickPrefsWearing](./r12_2/QuickPrefsWearing.png)
  
 * CATZ-476 - Add button to open the selected folder to the 'Quick Access' quickprefs panel
 Similarly, the new inventory icon on the ‘Quick Inventory’ panel will open your inventory with that folder selected and opened.
 
-![QuickPrefsInventory.png](QuickPrefsInventory.png)
+![QuickPrefsInventory](./r12_2/QuickPrefsInventory.png)
 
 ### Show in Inventory
 * CATZ-501 - Add 'Show in Inventory' to the worn attachment context menu
@@ -32,27 +32,27 @@ An ‘OMG how did we not think of this ourselves?!’ request by a user adds a h
  
 Clicking the menu item will open your inventory with the attachment’s inventory item visible and selected.
 
-![ShowInInventory.png](ShowInInventory.png)
+![ShowInInventory](./r12_2/ShowInInventory.png)
 
 ### Clear inventory filter on close
 * CATZ-494 - Option to reset the inventory filter when closing the filter floater
 A user reported that it wasn’t obvious to them that closing the inventory filter floater wouldn’t reset / clean up the filter options on that floater so I added an option to do just that in case other people are similarly confused.
 With the option checked, closing the floater will have the same effect as clicking the ‘Reset Filters’  button.
 
-![InvFilterResetOnClose.png](InvFilterResetOnClose.png)
+![InvFilterResetOnClose](./r12_2/InvFilterResetOnClose.png)
 
 ### Hover name tag offset
  
 Another user request of a simple feature: by default the sliders is all the way to the left. Dragging it to the right will increase the distance between the name tag and the avatar.
 
-![NameTagHover.png](NameTagHover.png)
+![NameTagHover](./r12_2/NameTagHover.png)
 
 ### ‘Collapse All Folders’ vs ‘Collapse To Folders’
 * CATZ-491 - Added "Collapse To Folders" option on the inventory gear menu to close all currently visible folders containing items
 The ‘collapse’ button has been there for a long time now on the inventory toolbar and resets your current inventory view to just showing only the top-level folders.
 However, sometimes you typed in a keyword (or otherwise filtered your inventory) and want to see the folders, but not the items.
 
-![InvCollapseFolders.png](InvCollapseFolders.png)
+![InvCollapseFolders](./r12_2/InvCollapseFolders.png)
 
 ## Minor improvements
 * CATZ-464 - Add the Ctrl-Backspace key combination to delete the previous word
